--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <style>
         .RepoCard {
             padding: 10px 15px 10px 15px;
-            border: #7D4040 solid 1px;
+            border: #7D404060 solid 1px;
             border-width: 0px 0px 1px 0px;
+            margin: 15px;
+            padding-bottom: 25px;
         }
 
         h1 {
@@ -36,8 +38,8 @@
 
         header, footer {
             background: #D9C8C8;
-            border: #7D4040 solid 1px;
-            border-width: 0px 0px 1px 0px;
+            border: #7D404040 solid 1px;
+            border-width: 1px 0px 1px 0px;
             padding: 15px;
             height: 74px;
             box-sizing: border-box;
