Mobiz-Advanced-Update

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             padding-bottom: 25px;
         }
 
+        .RepoCard:last-child {
+            border-bottom: none !important;
+        }
+
         h1 {
             color: #7D4040;
             text-decoration: none;
